--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -2,13 +2,11 @@
   height: 100%;
   background:
     linear-gradient(
-      rgba(255, 255, 255, 0.70), 
-      rgba(255, 255, 255, 0.70)
+      rgba(0, 0, 0, 0.20), 
+      rgba(0, 0, 0, 0.20)
     ), 
-  url(/assets/cover.jpeg);
+  url(/assets/cover.jpeg) no-repeat center center fixed;
   margin: 0px;
-  background-position: center;
-  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -40,6 +38,10 @@
   margin-top: 0px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.note hr {
+  border-color: #3498db;
 }
 
 .note:hover {
